@@ -178,7 +178,7 @@ receiving AES key, ek, and the receiving MAC key, mk, as detailed
 below.  (These will be the same as the keys Alice generated, above.)</li>
 <li>Uses mk to verify MAC<sub>mk</sub>(T<sub>A</sub>).</li>
 <li>Uses ek and ctr to decrypt
-AES-CTR<sub>ek,ctr</sub>(T<sub>A</sub>).</li>
+AES-CTR<sub>ek,ctr</sub>(msg).</li>
 </ol>
 </li>
 </ul>
@@ -690,12 +690,13 @@ receiving AES key.</li>
 </ul>
 <h4>Revealing MAC keys</h4>
 <p>Whenever you are about to forget either one of your old D-H key pairs, or
-one of your correspondent's old D-H public keys, take all of the MAC keys
-that were generated by that key (note that there are up to four: the
-sending and receiving MAC keys produced by the pairings of that key with
+one of your correspondent's old D-H public keys, take all of the
+receiving MAC keys
+that were generated by that key (note that there are up to two: the
+receiving MAC keys produced by the pairings of that key with
 each of two of the other side's keys; but note that you only need to
-take MAC keys that were actually used to either create a MAC on a
-message, or verify a MAC on a message), and put them (as a set of
+take MAC keys that were actually used to verify a MAC on a message), and
+put them (as a set of
 concatenated 20-byte values) into the "Old MAC keys to be revealed"
 section of the next Data Message you send.  This in done to allow the
 forgeability of OTR transcripts: once the MAC keys are revealed, anyone
